# anthropic-course

./: .env.example  .gitattributes  .gitignore  CHANGELOG.md  README.md  pyproject.toml  requirements.txt
notebooks/: 001_chunking.ipynb  001_prompt_evals_complete.ipynb  001_requests.ipynb  001_thinking_complete.ipynb  001_tools.ipynb  002_citations_complete.ipynb  002_images.ipynb  002_prompting_completed.ipynb  003_caching.ipynb  003_vectordb.ipynb  005_code_execution.ipynb  006_reranking.ipynb  007_contextual.ipynb
src/anthropic_course/: __init__.py  __main__.py  chat.py  conversation.py  dataset_generator.py  eval_pipeline.py  grader.py  logger.py  main.py  main2.py  main_old.py  text_editor.py  tools.py  utils.py
src/anthropic_course/claude_code/: CLAUDE.md  main.py
src/anthropic_course/claude_code/.claude/: settings.local.json
src/anthropic_course/claude_code/tests/: test_document.py
src/anthropic_course/claude_code/tools/: document.py
src/anthropic_course/mcp/: mcp_client.py
tests/: __init__.py  test_main.py
